--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="sale-list__link" href="#">Распродажа</a>
           </li>
           <li class="sale-list__item sale-list__item--delivery">
-            <a class="sale-list__link--delivery" href="#">Бесплатная доставка по России</a>
+            <a class="sale-list__link sale-list__link--delivery" href="#">Бесплатная доставка по России</a>
           </li>
         </ul>
       </nav>
@@ -65,19 +65,19 @@
         </h1>
           <div class="products">
         <h2 class="visually-hidden">Товары</h2>
-        <a class="products__item products__item--interior" href="#">
+        <a class="products__item products__item--interior" href="interior.html">
           <span class="products__title">Предметы интерьера</span>
         <svg class="products__icon" width="40.219px" height="62.411px">
           <use xlink:href="img/sprite.svg#icon-interior"></use>
         </svg>
         </a>
-        <a class="products__item products__item--toys" href="#">
+        <a class="products__item products__item--toys" href="toys.html">
           <span class="products__title">Детские игрушки</span>
           <svg class="products__icon" width="60px" height="59.62px">
             <use xlink:href="img/sprite.svg#icon-toys"></use>
           </svg>
         </a>
-        <svg class="products__icon--fill" width="1150px" height="34px">
+        <svg class="products__bg-fill" width="1150px" height="34px">
             <use xlink:href="img/sprite.svg#icon-zigzag-fill"></use>
         </svg>
       </div>
@@ -109,8 +109,11 @@
         </div>
         <div class="goods-of-the-week__image">
           <picture>
+          <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.jpg 2x">
           <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
-          <source media="(mon-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
           <img class="goods-of-the-week__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" width="260" height="315" alt="Товар недели">
           </picture>
         </div>
@@ -126,40 +129,40 @@
         <h2 class="about-us__title">Коротко о нас:</h2>
         <ul class="about-us__list">
           <li class="about-us__item about-us__item--eco">
-            <svg class="about-us__icon--eco" width="31.972px" height="37.301px">
+            <svg class="about-us__icon about-us__icon--eco" width="31.972px" height="37.301px">
               <use xlink:href="img/sprite.svg#icon-eco"></use>
             </svg>
             Экологически<br> чистые материалы
           </li>
           <li class="about-us__item about-us__item--money">
-            <svg class="about-us__icon--money" width="46.575px" height="27.332px">
+            <svg class="about-us__icon about-us__icon--money" width="46.575px" height="27.332px">
                   <use xlink:href="img/sprite.svg#icon-money"></use>
             </svg>
 
             Скандинавский стиль<br> по российской цене
           </li>
           <li class="about-us__item about-us__item--heart">
-            <svg class="about-us__icon--heart" width="33.05px" height="27.857px">
+            <svg class="about-us__icon about-us__icon--heart" width="33.05px" height="27.857px">
                 <use xlink:href="img/sprite.svg#icon-heart"></use>
             </svg>
             Увеличивает лайки<br> на фотографиях
           </li>
           <li class="about-us__item about-us__item--clew">
-            <svg class="about-us__icon--clew" width="34.373px" height="34.373px">
+            <svg class="about-us__icon about-us__icon--clew" width="34.373px" height="34.373px">
                 <use xlink:href="img/sprite.svg#icon-clew"></use>
             </svg>
 
             Связано вручную с<br> любовью и умилением
           </li>
           <li class="about-us__item about-us__item--rocket">
-            <svg class="about-us__icon--rocket" width="54.156px" height="23.183px">
+            <svg class="about-us__icon about-us__icon--rocket" width="54.156px" height="23.183px">
               <use xlink:href="img/sprite.svg#icon-rocket"></use>
             </svg>
 
             Поддержка отечественного<br> производителя
           </li>
           <li class="about-us__item about-us__item--gift">
-            <svg class="about-us__icon--gift" width="32.666px" height="32.486px">
+            <svg class="about-us__icon about-us__icon--gift" width="32.666px" height="32.486px">
               <use xlink:href="img/sprite.svg#icon-gift"></use>
             </svg>
 
@@ -186,7 +189,7 @@
             <span class="visually-hidden">Вперед</span>
           </button>
         </div>
-        <a class="comments__write button" href="comment-form.html">Написать</a>
+        <a class="comments__write button" href="comments-form.html">Написать</a>
         <svg class="comments__icon" width="1150px" height="23px">
             <use xlink:href="img/sprite.svg#icon-zigzag-line"></use>
         </svg>
@@ -224,7 +227,7 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6152511412683!2d30.32116901593964!3d59.938526269069975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2s!4v1506962375066" width="320" height="455" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="contacts__button">
-          <a class="contacts__write-us button" href="feedback-form.html">Напишите нам</a>
+          <a class="contacts__write-us button" href="write-us-form.html">Напишите нам</a>
       </div>
     </section>
     </main>
@@ -232,7 +235,7 @@
     <footer class="page-footer">
         <div class="page-footer__inner">
             <div class="page-footer__item footer-logo">
-            <a class="footer-logo__item" href="index.html" alt="Логотип магазина «Мишка»">
+            <a class="footer-logo__item" href="index.html">
             <svg class="footer-logo__icon" width="101.615px" height="34.056px">
               <use xlink:href="img/sprite.svg#icon-footer-logo"></use>
             </svg>
