--- a/catalog.html
+++ b/catalog.html
@@ -7,12 +7,15 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <div style="display: none">
+      <include src="build/img/sprite.svg"></include>
+    </div>
     <header class="main-header">
       <button class="main-header__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       <nav class="top-menu top-menu--opened">
-        <a class="top-menu__logo"  href="index.html">
+        <a class="top-menu__logo" href="index.html">
         <picture>
           <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -90,7 +93,7 @@
             <p class="product__about">Рост 30 см, вес 200 г</p>
             <div class="product__order">
               <p class="product__price">1 200 руб.</p>
-              <a class="product__button" href="#" title="Добавить в корзину">
+              <a class="product__button modal-button" href="#" title="Добавить в корзину">
                 <span class="visually-hidden">Добавить в корзину</span>
                 <svg class="product__icon" width="20.294px" height="18.849px">
                   <use xlink:href="img/sprite.svg#icon-basket"></use>
@@ -107,7 +110,7 @@
             <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
             <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
-            <img src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x"  alt="Корзинка для белья">
+            <img src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="Корзинка для белья">
             </picture>
           </a>
           <div class="product__description">
@@ -117,7 +120,7 @@
             <p class="product__about">Диаметр 15 см, высота 10 см</p>
             <div class="product__order">
               <p class="product__price">690 руб.</p>
-              <a class="product__button" href="#" title="Добавить в корзину">
+              <a class="product__button modal-button" href="#" title="Добавить в корзину">
                 <span class="visually-hidden">Добавить в корзину</span>
                 <svg class="product__icon" width="20.294px" height="18.849px">
                   <use xlink:href="img/sprite.svg#icon-basket"></use>
@@ -144,7 +147,7 @@
             <p class="product__about product__about--text">Диаметр 30 см, высота 30 см</p>
             <div class="product__order">
               <p class="product__price">1 500 руб.</p>
-              <a class="product__button" id="modal-button" href="#" title="Добавить в корзину">
+              <a class="product__button modal-button" href="#" title="Добавить в корзину">
                 <span class="visually-hidden">Добавить в корзину</span>
                 <svg class="product__icon" width="20.294px" height="18.849px">
                   <use xlink:href="img/sprite.svg#icon-basket"></use>
@@ -224,21 +227,21 @@
         </div>
     </footer>
 
-      <div class="modal">
-      <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+    <div class="modal">
+      <form class="modal__form" action="https://echo.htmlacademy.ru" method="post">
         <h2 class="modal__title">Добавить в корзину</h2>
-        <p class="modal-form__title">Выберите размер:</p>
-        <div class="modal-form__sizes">
-          <input class="modal-form__input" type="radio" name="size-1" id="size-1">
-          <label class="modal-form__label" for="size-1">S</label>
-          <input class="modal-form__input" type="radio" name="size-2" id="size-2">
-          <label class="modal-form__label" for="size-2">M</label>
-          <input class="modal-form__input" type="radio" name="size-3" id="size-3">
-          <label class="modal-form__label" for="size-3">L</label>
+        <p class="modal__text">Выберите размер:</p>
+        <div class="modal__sizes">
+          <input class="modal__input" type="radio" name="size" value="S" id="size-1">
+          <label class="modal__label" for="size-1">S</label>
+          <input class="modal__input" type="radio" name="size" value="M" id="size-2">
+          <label class="modal__label" for="size-2">M</label>
+          <input class="modal__input" type="radio" name="size" value="L" id="size-3">
+          <label class="modal__label" for="size-3">L</label>
         </div>
-        <button class="button modal-form__button" type="submit">Добавить</button>
+        <button class="modal__button" type="submit">Добавить</button>
       </form>
     </div>
-
+      <script src="js/script.js"></script>
   </body>
 </html>
