Improving download speed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Мишка</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div style="display: none">
@@ -199,11 +199,7 @@
       </section>
       <section class="contacts">
         <div class="contacts__wrap">
-        <h2 class="contacts__title">
-          <svg class="contacts__icon" width="46.68px" height="81.691px">
-                <use xlink:href="img/sprite.svg#icon-flag"></use>
-            </svg>
-          Контакты</h2>
+        <h2 class="contacts__title">Контакты</h2>
           <ul class="contacts__list">
             <li class="contacts__item">
               <p class="contacts__name">e-mail:</p>
