--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Мишка</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div style="display: none">
@@ -84,7 +84,7 @@
             <ul class="order-form__list">
               <li class="order-form__item order-form__item--radio">
                 <input class="order-form__input" type="radio" name="type" value="1" id="type-1" checked="">
-                <label class="order-form__label order-form__label--radio" for="type-1">Аксессуар для интерьера</label>
+                <label class="order-form__label order-form__label--radio" for="type-1">Аксессуар для<br class="order-form__transfer"> интерьера</label>
               </li>
               <li class="order-form__item order-form__item--radio">
                 <input class="order-form__input" type="radio" name="type" value="2" id="type-2">
@@ -95,27 +95,27 @@
           <section class="order-form__fieldset order-form__fieldset--gray order-form__fieldset--colors">
             <h2 class="order-form__legend order-form__legend--colors">Цвет</h2>
             <ul class="order-form__list order-form__list--colors">
-              <li class="order-form__item order-form__item--checkbox">
+              <li class="order-form__item order-form__item--white order-form__item--checkbox">
                 <input class="order-form__input" type="checkbox" name="color" value="1" id="color-1" checked="">
                 <label class="order-form__label order-form__label--checkbox" for="color-1">Белый</label>
               </li>
-              <li class="order-form__item order-form__item--checkbox">
+              <li class="order-form__item order-form__item--gray order-form__item--checkbox">
                 <input class="order-form__input" type="checkbox" name="color" value="2" id="color-2" checked="">
                 <label class="order-form__label order-form__label--checkbox" for="color-2">Серый</label>
               </li>
-              <li class="order-form__item order-form__item--checkbox">
+              <li class="order-form__item order-form__item--aqua order-form__item--checkbox">
                 <input class="order-form__input" type="checkbox" name="color" value="3" id="color-3">
                 <label class="order-form__label order-form__label--checkbox" for="color-3">«Тиффани»</label>
               </li>
-              <li class="order-form__item order-form__item--checkbox">
+              <li class="order-form__item order-form__item--black order-form__item--checkbox">
                 <input class="order-form__input" type="checkbox" name="color" value="4" id="color-4">
                 <label class="order-form__label order-form__label--checkbox" for="color-4">Черный</label>
               </li>
-              <li class="order-form__item order-form__item--checkbox">
+              <li class="order-form__item order-form__item--pink order-form__item--checkbox">
                 <input class="order-form__input" type="checkbox" name="color" value="5" id="color-5">
                 <label class="order-form__label order-form__label--checkbox" for="color-5">Розовый</label>
               </li>
-              <li class="order-form__item order-form__item--checkbox">
+              <li class="order-form__item order-form__item--orange order-form__item--checkbox">
                 <input class="order-form__input" type="checkbox" name="color" value="6" id="color-6">
                 <label class="order-form__label order-form__label--checkbox" for="color-6">Оранжевый</label>
               </li>
